--- a/hledger.conf
+++ b/hledger.conf
@@ -1,4 +1,7 @@
+# In this directory use this journal by default.
+# Note, breaks aliases which customise -f, like my YYYY and tYYYY aliases.
 -f main.journal
+
 --pretty
 --ignore-assertions
 
